# myfigure

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yaml
docs/: requirements.txt
docs/source/: conf.py  index.rst  myfigure.rst
examples/: example_myfigure.py
src/myfigure/: myfigure.py
tests/: test_myfigure.py
