[project]
name = "myfigure"
version = "1.0.1"
authors = [
    { name = "Matteo Pecchi"}
]
description = "standardized accessible plots"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.10"

dependencies = [
    "numpy>=1.21.2",
    "pandas>=1.3.3",
    "matplotlib>=3.4.3",
    "seaborn>=0.11.2",
    "openpyxl",
    "pyarrow",
]

[project.urls]
Homepage = "https://github.com/mpecchi/myfigure"
Documentation = "https://myfigure.readthedocs.io/en/latest/"

[tool.black]
line-length = 100

